@@ -1,6 +1,7 @@
 unity-api (7.110) UNRELEASED; urgency=medium
 
   * MirSurfaceInterface: replace keymapLayout and keymapVariant with keymap
+  * Unity.Application: Added and refactored APIs for surface-based window management
 
  -- Daniel d'Andrada <daniel.dandrada@canonical.com>  Wed, 13 Apr 2016 13:39:29 -0300
 
